Fixed alignment search page, added router link to no-account on login with email

--- a/src/pages/search/Search.vue.scss
+++ b/src/pages/search/Search.vue.scss
@@ -2,10 +2,12 @@
   padding: 30px 20px 10px 20px;
 
   $gradient: $global-lift-gradient;
+  $cat-height: 65px;
   $search-container: 465px;
 
   height: 100%;
   background-image: $gradient;
+  //padding: $default-padding;
   box-sizing: border-box;
 
   .search-container {
@@ -55,16 +57,24 @@
     }
 
     section {
+      padding: $default-padding;
+      margin: 0;
+      padding: 0;
       $spacing: 6px;
 
       margin: 0 auto;
       width: 100%;
       max-width: $search-container;
+      display: flex;
 
       ul {
         padding: 0;
         width: 100%;
         position: relative;
+        display: flex;
+        flex-wrap: wrap;
+        flex: 1 1 0;
+        margin: 20px -$spacing 0 -$spacing;
 
         li {
           list-style: none;
@@ -84,9 +94,6 @@
           }
 
           a {
-            width: 48%;
-            float: left;
-            margin: 0 12px 12px 0;
             height: $cat-height;
             text-align: center;
             border-radius: $default-radius;
